# todo-c

./: CMakeLists.txt  Makefile  README.md
nsis/: installer.nsi
scripts/: package.bat  package.sh
src/: board.cpp  main.cpp  menu.cpp  operation.h  title.cpp
